# Aprendendo-OpenGL

./: CMakeLists.txt  readme.md
include/: shaders.h  shaders.hpp
include/glad/: glad.h
lib/: glfw3.lib
resources/: frag_shader.glsl  frag_shader_orange.glsl  vertexShader.glsl  vertex_shader.glsl
src/: Main.cpp  Shader.cpp  glad.c  glad.cpp  main.cpp  shader.cpp
